fix memory leak in QAxServerBase::internalActivate

There is no need to call QStringToBSTR, because the method
IOleInPlaceUIWindow::SetActiveObject expects an POLESTR, not a PBSTR.

Task-number: QTBUG-30890

Change-Id: I98e42d400400cae849198d2d9c7cbb9c6de7991d